# HeadmanBot

./: .coverage  .gitignore  Dockerfile  Makefile  README.md  buttons.py  callbacks.py  docker-compose.dev.yml  docker-compose.yml  headman_commands.py  headman_reg_commands.py  headmen_commands.py  headmen_reg_commands.py  main.py  main.spec  messages.py  middlewares.py  personal_chat_commands.py  poll.py  poll_by_role.html  pyproject.toml  request.py  requirements.dev.txt  requirements.txt  service.py  start.sh  states.py  update_info.html  work_api.py
config/: .env.test  .env.txt  config_reader.py
database/: bot.db
docker/: Dockerfile  Dockerfile.dev  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml
docs/: README.md  architecture.md  ci_cd.md  code style.md  guides.md  kernel.md  naming.md  structure.md  trello.md
docs/schemas/: .$postgres.drawio.bkp  postgres.drawio
examples/: .database.env  .env
logs/: logs.logs
nginx/: Dockerfile  Dockerfile.dev  Dockerfile.test  nginx.conf  nginx.dev.conf  nginx.test.conf
postgres/: Dockerfile  init.sql  migrate.sh  postgresql.conf
postgres/migrations/: 000_migration_create_base_tables.sql  001_migration_new_value_to_role_enum.sql  002_migration_added_nstu_uni_enum.sql  003_migration_added_stu_uni_enum.sql  004_migration_added_miigaik_uni_enum.sql  migration_create_base_tables.sql  new_value_to_role_enum.sql
redis/: Dockerfile  redis.conf
scripts/: down-testing.sh  down.sh  generate_ssl_certificates.sh  start-testing.sh  start.sh
sql/: init.sql
src/: __main__.py  buttons.py  callbacks.py  headman_commands.py  headman_reg_commands.py  init_bot.py  main.py  messages.py  middlewares.py  mirea_api.py  personal_chat_commands.py  poll.py  reg_states.py  retry_decorator.py  sending_scheduler.py  states.py  transform_data.py  work_api.py
src/api/: app.py  bmstu_schedule_api.py  mirea_schedule_api.py  schedule_api.py  schedule_api_interface.py
src/bot/: __init__.py  build_root_router.py  root_router.py
src/buttons/: __init__.py  inline_buttons.py  reply_buttons.py  void_button.py
src/callback_data/: access_callback_data.py  choose_lesson_callback_data.py
src/celery/: task_manager.py  worker.py
src/commands/: __init__.py  ask_attendance_command.py  cache_create_student_data_command.py  cache_student_enter_group_data_command.py  change_admin_group_command.py  clear_create_student_data_cache_if_exists_command.py  clear_create_student_data_comamnd.py  clear_student_enter_group_data_command.py  clear_student_enter_group_data_if_exists_command.py  create_attendance_command.py  delete_student_by_fullname_group_command.py  delete_student_by_tg_id_command.py  expel_user_from_group_command.py  headman_commands.py  headman_reg_commands.py  make_attendance_relevant_command.py  make_student_viceheadman_command.py  personal_chat_commands.py  register_student_command.py  student_enter_group_command.py  unmake_student_viceheadman_command.py  unnote_attendance_for_all_command.py  update_all_attendaces_command.py  update_attendance_command.py  update_student_birthdate_command.py  update_student_first_name_command.py  update_student_last_name_command.py
src/common/: facade.py  uow.py  use_case.py
src/config/: __init__.py  config.py  env.py  logger_config.py
src/database/: __init__.py  config.py  create_tables.sql  db.py  postgres.py  redis.py  tables.sql
src/dto/: __init__.py  attendance.py  create_student_dto.py  dto.py  group.py  group_attendances.py  lesson.py  schedule.py  student.py  student_enter_group_dto.py  student_raw.py  student_read_fullname.py  university.py
src/enums/: __init__.py  enum_contains_meta.py  profile_field.py  role.py  telegram_command.py  university_alias.py  university_id.py  visit_status.py  weekday.py
src/handlers/: __init__.py
src/help/: __init__.py
src/infrastructure/: container.py
src/jobs/: __init__.py  clearing_job.py  schedule_download_job.py  sending_job.py  update_database_job.py  update_schedule_job.py
src/kernel/: __init__.py  config.py  init_module.py  role.py  student_dto.py
src/lib/: model.py
src/middlewares/: __init__.py  callback_middleware.py  check_headman_middleware.py  check_in_middleware.py  check_registration_middleware.py  headman_cmds_middleware.py  headman_reg_middleware.py  reg_middleware.py  templates.py  throttling_middleware.py
src/presentation/: __init__.py  root_router.py
src/queries/: check_group_exists_in_uni_query.py  fetch_uni_alias_by_group_id_query.py  fetch_uni_timezone_by_group_id_query.py  find_group_by_name_and_alias_query.py  find_group_headman_query.py  find_student_query.py  get_all_and_active_students_count_query.py  get_all_groups_query.py  get_all_universities_query.py  get_edu_profile_info_query.py  get_group_info_for_admins_query.py  get_lesson_attendance_for_group_query.py  get_student_attedance_query.py  get_student_role_by_telegram_id_query.py  get_students_from_group_query.py  get_students_info_from_group_query.py  get_today_schedule_query.py  (+1 more)
src/repositories/: base.py  (+11 more)
systemd/: headman_bot.service  headman_test_bot.service
tests/: test_bmstu_api.py  test_mirea_api.py  test_model.py
(+1081 files in other folders)
