[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "headmanbot"
version = "0.1.0"
description = "Telegram bot which helps the headman"
authors = ["NeoTheBestDeveloper <neothebestmain@protonmail.com>", "qiisqwww dmitriy <qiisqwww@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.2.0"
httpx = "^0.26.0"
asyncpg = "^0.29.0"
loguru = "^0.7.2"
redis = "^5.0.1"
beautifulsoup4 = "^4.12.2"
apscheduler = "^3.10.4"
injector = "^0.21.0"
fastapi = "^0.108.0"


[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^0.23.2"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
pytest-randomly = "^3.15.0"
types-requests = "^2.31.0.10"
types-redis = "^4.6.0.11"
asyncpg-stubs = "^0.29.1"
pyright = "^1.1.342"
black = "^23.12.1"
isort = "^5.13.2"
ruff = "^0.1.9"
mypy = "^1.8.0"

[tool.pylint]
max-line-length = 120
disable = [
    "missing-class-docstring",
    "missing-function-docstring",
    "missing-module-docstring",
    "too-few-public-methods",
    "cyclic-import",
    "unspecified-encoding",
    "redefined-outer-name",
    "useless-return",
    "W0511",
    "C0103",
    "R0801",
    "E0401"
]

[tool.ruff]
line-length = 120

[tool.black]
color = true
line-length = 120

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = true
python_version = "3.11"
