[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "headmanbot"
version = "0.1.0"
description = "Telegram bot which helps the headman"
authors = ["NeoTheBestDeveloper <neothebestmain@protonmail.com>", "qiisqwww dmitriy <qiisqwww@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.2.0"
httpx = "^0.26.0"
asyncpg = "^0.29.0"
loguru = "^0.7.2"
redis = "^5.0.1"
beautifulsoup4 = "^4.12.2"
apscheduler = "^3.10.4"
injector = "^0.21.0"
fastapi = "^0.108.0"
uvicorn = "^0.25.0"
jinja2 = "^3.1.2"

[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^0.23.2"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
pytest-randomly = "^3.15.0"
types-requests = "^2.31.0.10"
types-redis = "^4.6.0.11"
asyncpg-stubs = "^0.29.1"
pyright = "^1.1.342"
ruff = "^0.1.9"
mypy = "^1.8.0"
pytest-env = "^1.1.3"

[tool.ruff]
target-version = "py311"
line-length = 120
select = ["ALL"]
ignore = [
    "D1", # No docstrings.
    "ANN101", # Do not annotate Self.
]
fix = true
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$" # For unusable variables.

[tool.mypy]
python_version = "3.11"
strict = true
show_error_codes = true
ignore_missing_imports = true # Work incorrectly and useless
disallow_untyped_decorators = false # Because of FastAPI and aiogramm decorators invoke this error

[tool.pyright]
include = ["src"]
strict = ["src"]
reportMissingImports = false

[tool.pytest_env]
DEBUG=true
BOT_TOKEN=""
LOGGING_PATH="logs/log.log"
TZ=""
DB_USER=""
DB_PASS=""
DB_NAME=""
DB_PORT=228
DB_HOST=""
REDIS_PORT=337
REDIS_HOST=""
ADMIN_IDS="228"
HTTP_PORT=8080
HTTP_HOST=""
WEBHOOK_PATH=""
WEBHOOK_URL=""
WEBHOOK_SECRET=""
NGROK_AUTHTOKEN="" 
NGROK_DOMAIN=""
THROTTLING_EXPIRE_TIME=60
THROTTLING_RATE_PER_MINUTE=1000
