[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "headmanbot"
version = "0.1.0"
description = "Telegram bot which helps the headman"
authors = ["NeoTheBestDeveloper Oleg <neothebestmain@protonmail.com>", "qiisqwww dmitriy <qiisqwww@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "3.13.0"
httpx = "^0.26.0"
asyncpg = "^0.29.0"
loguru = "^0.7.2"
redis = "^5.0.1"
beautifulsoup4 = "^4.12.2"
apscheduler = "^3.10.4"
injector = "^0.21.0"
fastapi = "^0.108.0"
uvicorn = "^0.25.0"
jinja2 = "^3.1.2"
icalendar = "^5.0.11"
recurring-ical-events = "^2.1.2"
celery = "^5.4.0"
flower = "^2.0.1"
celery-redbeat = "^2.2.0"
pandas = "^2.2.2"
openpyxl = "^3.1.5"

[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^0.23.2"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
pytest-randomly = "^3.15.0"
types-requests = "^2.31.0.10"
types-redis = "^4.6.0.11"
asyncpg-stubs = "^0.29.1"
pyright = "^1.1.342"
ruff = "^0.1.9"
mypy = "^1.8.0"
pytest-env = "^1.1.3"
isort = "^5.13.2"

[tool.ruff]
target-version = "py312"
line-length = 120
select = ["ALL"]
ignore = [
    "D1", # No docstrings.
    "ANN101", # Do not annotate Self.
    "RUF001", # False positive. Tell about latin C and cyrilc C

    "FBT", # I want to use boolean as a function argument.
    "A003", # I want to use 'id' as name for object attribute.
]
fix = true
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$" # For unusable variables.

[tool.mypy]
python_version = "3.12"
strict = true
show_error_codes = true
ignore_missing_imports = true # Work incorrectly and useless
disallow_untyped_decorators = false # Because of FastAPI and aiogramm decorators invoke this error
disallow_subclassing_any = false

[tool.pyright]
include = ["src"]
strict = ["src"]
reportMissingImports = false

[tool.pytest_env]
TESTING=true
